--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "file-system": "^2.2.2",
+    "jquery": "^3.3.1",
     "logger": "0.0.1",
     "mocha": "^5.0.5",
     "mongoose": "^5.2.4",
